Source/JavaScriptCore/bytecode/LinkTimeConstant.h
@@ -134,6 +134,7 @@ class JSGlobalObject;
     v(isRemoteFunction, nullptr) \
     v(arrayFromFastFillWithUndefined, nullptr) \
     v(arrayFromFastFillWithEmpty, nullptr) \
+    v(arraySpeciesWatchpointIsValid, nullptr) \
     v(arraySort, nullptr) \
     v(jsonParse, nullptr) \
     v(jsonStringify, nullptr) \
